--- a/prometheus.yml
+++ b/prometheus.yml
@@ -5,5 +5,6 @@ scrape_configs:
       static_configs:
         - targets: ['localhost:9090']    
     - job_name: 'prometheus_example'
+      metrics_path: '/actuator/prometheus'
       static_configs:
-        - targets: ['172.27.104.172:8000']
+        - targets: ['host.docker.internal:8080']
